--- a/RESTful/src/main/resources/application.properties
+++ b/RESTful/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/Test
 spring.datasource.username=root
-spring.datasource.password=root // temp password
+spring.datasource.password=root
